that shitty event num overlap correction

--- a/css/designmadecool.css
+++ b/css/designmadecool.css
@@ -3833,7 +3833,7 @@ margin-bottom: 400666px;
 
 .skills-num {
   position: absolute;
-  left: 10%;
+  left: 0%;
   top: 22.1em;
   right: auto;
   width: 13.75em;
